DocTypesInternalApi + test casi positivi e negativi
